--- a/POLYPLAY/src/main/webapp/resources/plugins/css/custom.css
+++ b/POLYPLAY/src/main/webapp/resources/plugins/css/custom.css
@@ -231,10 +231,10 @@ section {
 	color: #fff;
 	width: 50px;
 	height: 50px;
-	border: 1px solid #fff;
+	border: 1px solid rgba(0,0,0,0);
 	text-align: center;
 	line-height: 50px;
-	font-size: 20px;
+	font-size: 40px;
 }
 .main-slider h2 {
 	color: #fff;
@@ -249,7 +249,7 @@ section {
 	background: rgba(255,255,255,0.9)
 }
 .main-slider .swiper-pagination-bullet-active {
-	background: #0297ff
+	background: #f3c523
 }
 /* SERVICE SECTION
 -------------------------------------------------- */
